# Orbital

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REPORT-sdk-transport-idle-investigation.md  pyproject.toml
TASK/: TASK-FIX-headless-user-agent.md  TASK-FIX-sdk-transport-rate-limit.md  TASK-INVESTIGATE-frontend-polling.md
TASK/agent-loop-rewrite/: API-reference.md  test-scenario.md
agent_os/agent/: __init__.py  compaction.py  context.py  loop.py  pricing.py  project_paths.py  prompt_builder.py  session.py  skills.py  token_utils.py  tool_result_filters.py  tool_result_lifecycle.py  workspace_files.py
agent_os/agents/: __init__.py  manifest.py  registry.py  setup_engine.py  setup_types.py
agent_os/api/: app.py  middleware.py  ws.py
agent_os/config/: provider_registry.py  providers.json
agent_os/daemon_v2/: activity_translator.py  agent_manager.py  autonomy.py  browser_manager.py  browser_resolution.py  credential_store.py  default_skills_installer.py  lifecycle_observer.py  message_router.py  models.py  process_manager.py  project_store.py  (+4 more)
assets/: icon.icns
bugs/: 2026-03-11-recaptcha-despite-cookie-session.md  2026-03-13-agent-monitoring-diagnosis.md
installer/: agentos-setup.iss
investigation/: cancellation-architecture-findings.md
scripts/: build-desktop.sh  build-macos.sh  health-check.sh  restart-daemon.sh  smoke_state_refresh.py  smoke_v5.py
tests/: conftest.py  test_e2e.py  test_e2e_acp.py  test_user_stories.py  test_wiring.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+389 files in other folders)
