[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.39",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "trafilatura>=1.6",
    "keyring>=24.0",
    "python-multipart>=0.0.5",
    "websockets>=11.0",
    "croniter>=1.3",
    "psutil>=5.9",
    "aiofiles>=23.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
browser = [
    "patchright>=1.40",
]
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.1",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["agent_os*"]
